--- a/Triangle/Triangle.Logic.Test/Triangle.Tests.csproj
+++ b/Triangle/Triangle.Logic.Test/Triangle.Tests.csproj
@@ -63,7 +63,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Negative.cs" />
-    <Compile Include="Positive.cs" />
+    <Compile Include="NotATriangle.cs" />
+    <Compile Include="Type.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
