--- a/Triangle/Triangle.Logic/Triangle.Core.csproj
+++ b/Triangle/Triangle.Logic/Triangle.Core.csproj
@@ -34,6 +34,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -43,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\InputSerializer.cs" />
     <Compile Include="Presenter\InputParser.cs" />
     <Compile Include="Presenter\IPresenter.cs" />
     <Compile Include="View\IView.cs" />
